# vosk-imp

./: README.md  __init__.py  pyproject.toml
src/vosk_imp/: VoskImp.py  __init__.py  vosk_imp.py
tests/: test_vosk.py
